Aggiunto del contenuto
Aggiunte pagine nella sezione su CSS

--- a/html/template.html
+++ b/html/template.html
@@ -26,10 +26,8 @@
 					</ul>
 					<h1>CSS</h1>
 					<ul>
-						<li><a href="">Selettori</a></li>
-						<li><a href="">Propriet&agrave;</a></li>
-						<li><a href="">Dimensioni</a></li>
-						<li><a href="">Box model</a></li>
+						<li><a href="display.cgi?page=selettori">Selettori</a></li>
+						<li><a href="display.cgi?page=box-model">Box model</a></li>
 						<li><a href="">Posizionamento</a></li>
 						<li><a href="">Layout</a></li>
 					</ul>
