Aggiunto del contenuto
Aggiunta pagina sui tipi di layout nella sezione su CSS

--- a/html/template.html
+++ b/html/template.html
@@ -28,8 +28,8 @@
 					<ul>
 						<li><a href="display.cgi?page=selettori">Selettori</a></li>
 						<li><a href="display.cgi?page=box-model">Box model</a></li>
+						<li><a href="display.cgi?page=layout">Layout</a></li>
 						<li><a href="">Posizionamento</a></li>
-						<li><a href="">Layout</a></li>
 					</ul>
 				</div>
 			</div>
