Aggiunto del contenuto
Aggiunta pagina sul posizionamento di elementi con CSS

--- a/html/template.html
+++ b/html/template.html
@@ -29,7 +29,7 @@
 						<li><a href="display.cgi?page=selettori">Selettori</a></li>
 						<li><a href="display.cgi?page=box-model">Box model</a></li>
 						<li><a href="display.cgi?page=layout">Layout</a></li>
-						<li><a href="">Posizionamento</a></li>
+						<li><a href="display.cgi?page=posizionamento">Posizionamento</a></li>
 					</ul>
 				</div>
 			</div>
