Aggiunto del contenuto
Aggiunta pagina su elementi e attributi HTML

--- a/html/template.html
+++ b/html/template.html
@@ -21,7 +21,7 @@
 				<div class="sticky">
 					<h1>XHTML</h1>
 					<ul>
-						<li><a href="">DTD</a></li>
+						<li><a href="display.cgi?page=elementi">Elementi</a></li>
 						<li><a href="">Correttezza</a></li>
 					</ul>
 					<h1>CSS</h1>
