Aggiunto del contenuto
Aggiunta pagina su well-formedness e validità di HTML

--- a/html/template.html
+++ b/html/template.html
@@ -22,7 +22,7 @@
 					<h1>XHTML</h1>
 					<ul>
 						<li><a href="display.cgi?page=elementi">Elementi</a></li>
-						<li><a href="">Correttezza</a></li>
+						<li><a href="display.cgi?page=correttezza">Correttezza</a></li>
 					</ul>
 					<h1>CSS</h1>
 					<ul>
