Minor change: formattazione e whitespace

--- a/html/box-model.html
+++ b/html/box-model.html
@@ -1,15 +1,16 @@
 <h1>Box model</h1>
 
-<p>Gli elementi HTML vengono presentati al client racchiusi in <em>box</em>. Le
-propriet&agrave; del box nel quale &egrave; racchiuso un elemento, modificabili
-con CSS, determinano come questo verr&agrave; riprodotto dal client.</p>
+<p>Gli elementi HTML vengono presentati al client racchiusi in
+<strong>box</strong>. Le propriet&agrave; del box nel quale &egrave; racchiuso
+un elemento, modificabili con CSS, determinano come questo verr&agrave;
+riprodotto dal client.</p>
 
 <h2>Tipi di box</h2>
 
 <p>Esistono due tipologie fondamentali di box: <code>block</code> ed
 <code>inline</code>. Ogni elemento appartiene per specifica ad una di queste
 tipologie, ma &egrave; possibile scegliere di cambiarla utilizzando l'attributo
-<code>display</code>.</p>
+<strong><code>display</code></strong>.</p>
 
 <h3><code>block</code></h3>
 
