--- a/html/correttezza.html
+++ b/html/correttezza.html
@@ -1,8 +1,8 @@
 <h1>Correttezza</h1>
 
 <p>Per determinare la correttezza di un documento HTML, &egrave; necessario
-considerare due aspetti fondamentali: <strong>well-formedness</strong> e
-<strong>validit&agrave;</strong>.</p>
+considerare due aspetti fondamentali: <em>well-formedness</em> e
+<em>validit&agrave;</em>.</p>
 
 <h2>Well-formedness</h2>
 
@@ -68,9 +68,9 @@ la presentazione.</p>
 <h3>Inclusione del DTD</h3>
 
 <p>Per associare ciascun documento alla grammatica per il quale &egrave;
-concepito, si include la dichiarazione DOCTYPE. Questa fa riferimento ad un DTD
-che pu&egrave; essere locale oppure globale (<code>PUBLIC</code>), definita in
-remoto.</p>
+concepito, si include la dichiarazione <strong>DOCTYPE</strong>. Questa fa
+riferimento ad un DTD che pu&egrave; essere locale (<code>SYSTEM</code>) oppure
+pubblico (<code>PUBLIC</code>), cio&egrave; definito in remoto.</p>
 
 <pre><code>&lt;!DOCTYPE html 
 PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
