--- a/html/layout.html
+++ b/html/layout.html
@@ -1,9 +1,9 @@
 <h1>Layout</h1>
 
 <p>Oltre alle modalit&agrave; di allineamento con gli elementi circostanti
-descritte in <a href="display.cgi?page=box-model">Box model</a>, l'attributo
-<code>display</code> pu&ograve; controllare il posizionamento degli elementi
-<em>all'interno</em> di ciascun box.<p>
+descritte in <a href="display.cgi?page=box-model">Box model</a>, la
+propriet&agrave; <strong><code>display</code></strong> pu&ograve; controllare
+il posizionamento degli elementi <em>all'interno</em> di ciascun box.<p>
 
 <h2><em>Normal flow</em></h2>
 
