--- a/html/posizionamento.html
+++ b/html/posizionamento.html
@@ -1,8 +1,9 @@
 <h1>Posizionamento</h1>
 
-<p>Con la propriet&agrave; <code>position</code> &egrave; possibile alterare la
-posizione predefinita che un box assumerebbe nella pagina, aggiungendo degli
-offset relativi ad essa oppure ad altre parti del documento.</p>
+<p>Con la propriet&agrave; <strong><code>position</code></strong> &egrave;
+possibile alterare la posizione predefinita che un box assumerebbe nella
+pagina, aggiungendo degli offset relativi ad essa oppure ad altre parti del
+documento.</p>
 
 <h2><code>position: relative</code></h2>
 
