--- a/html/selettori.html
+++ b/html/selettori.html
@@ -1,7 +1,7 @@
 <h1>Selettori</h1>
 
 <p>Per determinare gli elementi della pagina HTML ai quali applicare lo stile,
-CSS fa uso dei <em>selettori</em>, pattern di caratteri che possono
+CSS fa uso dei <strong>selettori</strong>, pattern di caratteri che possono
 identificare gli elementi a partire da diverse propriet&agrave;:</p>
 
 <h2>Tipo, classe e ID</h2>
