Aggiunto del contenuto
Aggiunte ulteriori applicazioni, rivisto il concetto di pseudo-elemento

--- a/html/box-model.html
+++ b/html/box-model.html
@@ -42,8 +42,7 @@ ed <code>height</code>.
 
 		<li>Nell'header di questi blocchi di annotazioni: in questo modo
 		&egrave; stato possibile impostare un margine per il contenuto
-		(<code>content</code>) della pseudo-classe <code>::before</code>, che
-		ha consentito di inserire automaticamente il titolo in ogni blocco.</li>
+		(<code>content</code>) dello pseudo-elemento <code>::before</code>.</li>
 	</ul>
 </div>
 
