Minor change: footer
Popolato il footer con firma e link per tornare in cima

--- a/html/template.html
+++ b/html/template.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<a name="top"></a>
 		<div id="header">
 			<div class="centered">
 				<div id="title"><a href="display.cgi">Linguaggi per il Web</a></div>
@@ -40,7 +41,8 @@
 		</div>
 		<div id="footer">
 			<div class="centered">
-				Footer
+				<div>Andrea Ippoliti - matricola 1496769</div>
+				<div><a href="#top">Torna su</a></div>
 			</div>
 		</div>
 	</body>
