Minor change: whitespace
Modificati line break in alcune righe di box-model.html

--- a/html/box-model.html
+++ b/html/box-model.html
@@ -52,7 +52,9 @@ ed <code>height</code>.
 
 <ul> 
 	<li><strong>margin</strong> &egrave; la parte pi&ugrave; esterna del box,
-	le cui dimensioni determinano la distanza del box dai box circostanti. Se anche questi dispongono di un margine non nullo, quest'area pu&ograve; collassare automaticamente alla misura maggiore tra le due.</li>
+	le cui dimensioni determinano la distanza del box dai box circostanti. Se
+	anche questi dispongono di un margine non nullo, quest'area pu&ograve;
+	collassare automaticamente alla misura maggiore tra le due.</li>
 
 	<li><strong>border</strong> &egrave; la linea che delimita il box.</li>
 
@@ -66,7 +68,8 @@ ed <code>height</code>.
 <div class="note"> 
 	<p>Contrariamente a quanto si potrebbe pensare, di default 
 	<code>width</code> ed <code>height</code> impostano la dimensione del solo
-	contenuto, al quale poi andranno sommate le misure delle aree circostanti per ottenere le dimensioni effettive del box.</p>
+	contenuto, al quale poi andranno sommate le misure delle aree circostanti
+	per ottenere le dimensioni effettive del box.</p>
 
 	<p>&Egrave; possibile cambiare questo comportamento con:</p>
 
