Major: rimosso CGI
Rimosso programma CGI ed i relativi riferimenti

--- a/html/layout.html
+++ b/html/layout.html
@@ -1,7 +1,7 @@
 <h1>Layout</h1>
 
 <p>Oltre alle modalit&agrave; di allineamento con gli elementi circostanti
-descritte in <a href="display.cgi?page=box-model">Box model</a>, la
+descritte in <a href="display.php?page=box-model">Box model</a>, la
 propriet&agrave; <strong><code>display</code></strong> pu&ograve; controllare
 il posizionamento degli elementi <em>all'interno</em> di ciascun box.<p>
 
@@ -25,7 +25,7 @@ dimensioni proprie e si adattano esclusivamente al proprio contenuto.</p>
 <ul>
 	<li>alterare la posizione predefinita dei box interni, utilizzando la
 	propriet&agrave; <code>
-	<a href="display.cgi?page=posizionamento">position</a></code></li>
+	<a href="display.php?page=posizionamento">position</a></code></li>
 
 	<li>cambiare completamente il tipo di layout applicato, agendo
 	sull'attributo <code>display</code> del contenitore</li>
@@ -50,7 +50,7 @@ parti uguali:</p>
 
 <div class="note"> 
 	<p>Indipendentemente dall'impostazione corrente di 
-	<code><a href="display.cgi?page=box-model">box-sizing</a></code>, lo spazio 
+	<code><a href="display.php?page=box-model">box-sizing</a></code>, lo spazio
 	disponibile si riferisce a quello residuo dopo l'applicazione di bordi e 
 	padding.</p>
 </div>
