--- a/html/template.html
+++ b/html/template.html
@@ -6,14 +6,14 @@
 	<head>
 		<title>Template</title>
 
-		<link rel="stylesheet" href="display.cgi?style=template" type="text/css" />
+		<link rel="stylesheet" href="css/style.css" type="text/css" />
 	</head>
 
 	<body>
 		<a name="top"></a>
 		<div id="header">
 			<div class="centered">
-				<div id="title"><a href="display.cgi">Linguaggi per il Web</a></div>
+				<div id="title"><a href="display.php">Linguaggi per il Web</a></div>
 				<div id="part">P01: XHTML+CSS</div>
 			</div>
 		</div>
@@ -22,15 +22,15 @@
 				<div class="sticky">
 					<h1>XHTML</h1>
 					<ul>
-						<li><a href="display.cgi?page=elementi">Elementi</a></li>
-						<li><a href="display.cgi?page=correttezza">Correttezza</a></li>
+						<li><a href="display.php?page=elementi">Elementi</a></li>
+						<li><a href="display.php?page=correttezza">Correttezza</a></li>
 					</ul>
 					<h1>CSS</h1>
 					<ul>
-						<li><a href="display.cgi?page=selettori">Selettori</a></li>
-						<li><a href="display.cgi?page=box-model">Box model</a></li>
-						<li><a href="display.cgi?page=layout">Layout</a></li>
-						<li><a href="display.cgi?page=posizionamento">Posizionamento</a></li>
+						<li><a href="display.php?page=selettori">Selettori</a></li>
+						<li><a href="display.php?page=box-model">Box model</a></li>
+						<li><a href="display.php?page=layout">Layout</a></li>
+						<li><a href="display.php?page=posizionamento">Posizionamento</a></li>
 					</ul>
 				</div>
 			</div>
