Minor: modifica codice di esempio
Rimosso il colore dal codice di esempio (non più interpretato)

--- a/html/static/correttezza.html
+++ b/html/static/correttezza.html
@@ -14,7 +14,7 @@ requisiti:</p>
 	chiusura. Nel caso di elementi vuoti, XHTML richiede che questi siano 
 	comunque chiusi inserendo una barra alla fine del tag di apertura:</p>
 
-	<pre><code>&lt;img src="/path/to/img" alt="Descrizione dell'immagine" <span class="colored">/</span>&gt;</code></pre></li>
+	<pre><code>&lt;img src="/path/to/img" alt="Descrizione dell'immagine" /&gt;</code></pre></li>
 
 	<li>Non si sovrappone con altri elementi (<em>overlapping</em>), ma &egrave;
 	 aperto e chiuso al loro interno oppure li contiene completamente.</li>
