--- a/html/static/elementi.html
+++ b/html/static/elementi.html
@@ -21,7 +21,7 @@ ben definito con una propria semantica. Ad esempio:</p>
 
 <p>In HTML, i tag sono racchiusi da parentesi uncinate o <em>chevron</em>:</p>
 
-<pre><code><span class="colored">&lt;h1&gt;</span>Questo &egrave; un titolo<span class="colored">&lt;/h1&gt;</span></code></pre>
+<pre><code>&lt;h1&gt;Questo &egrave; un titolo&lt;/h1&gt;</code></pre>
 
 <h2>Attributi</h2>
 
@@ -35,10 +35,10 @@ di un'immagine, ed <code>alt</code>, che ne include una rappresentazione
 testuale visualizzabile in caso di problemi o riproducibile da uno screen
 reader:</p>
 
-<pre><code>&lt;img <span class="colored">src="/path/to/img"</span> <span class="colored">alt="Descrizione dell'immagine"</span> /&gt;</code></pre>
+<pre><code>&lt;img src="/path/to/img" alt="Descrizione dell'immagine" /&gt;</code></pre>
 
 <p>Un esempio di attributo ammissibile ma non richiesto &egrave; invece 
 <code>style</code>, che pu&ograve; essere specificato per qualsiasi elemento e 
 permette di definire inline regole CSS per controllarne la presentazione:</p>
 
-<pre><code>&lt;div <span class="colored">style="border: 1px solid;"</span>&gt;Ciao&lt;/div&gt;</code></pre>
+<pre><code>&lt;div style="border: 1px solid;"&gt;Ciao&lt;/div&gt;</code></pre>
