Minor: estrazione da codice di esempio
Estratti alcuni tag non più interpretati da elementi code

--- a/html/static/layout.html
+++ b/html/static/layout.html
@@ -50,8 +50,8 @@ parti uguali:</p>
 
 <div class="note"> 
 	<p>Indipendentemente dall'impostazione corrente di 
-	<code><a href="display.php?page=box-model">box-sizing</a></code>, lo spazio
-	disponibile si riferisce a quello residuo dopo l'applicazione di bordi e 
+	<a href="display.php?page=box-model"><code>box-sizing</code></a>, lo spazio
+	disponibile si riferisce a quello residuo dopo l'applicazione di bordi e
 	padding.</p>
 </div>
 
