--- a/html/static/main.html
+++ b/html/static/main.html
@@ -12,7 +12,7 @@ contenuti sono navigabili utilizzando il menu a sinistra.</p>
 carica la lista dei contenuti disponibili e quello richiesto da un database.</p>
 
 <p>Il database &egrave; inizializzato dallo script 
-<code><a href="install.php">install.php</a></code>. Dopo essersi collegato con
+<a href="install.php"><code>install.php</code></a>. Dopo essersi collegato con
 le credenziali inserite in <code>connection.php</code>, questo crea le tabelle
 necessarie ed utilizza una lista di contenuti per popolarle. Per impostazione
 predefinita, questa lista &egrave; integrata nello script ed include contenuti
