Minor: modifica contenuto

--- a/html/static/selettori.html
+++ b/html/static/selettori.html
@@ -47,8 +47,8 @@ esprimono con l'operatore <code>:</code>.</p>
 	<p>Si &egrave; fatto uso delle pseudo-classi:</p>
 
 	<ul>
-		<li>Nell'header, per allineare a destra il testo dell'ultimo
-		<em>flex-item</em> con <code>:last-child</code>;</li>
+		<li>Nell'header, per allineare a destra l'ultima <em>flex-item</em> con
+		<code>:last-child</code>;</li>
 
 		<li> Nel menu, per cambiare l'aspetto dei link puntati con
 		<code>:hover</code>;</li>
